--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,9 +11,9 @@
    
    <!-- аватар -->
    <button class="h-6 w-12 inline-flex items-center">
-      <img src="/assets/images/avatar.png" class="h-7 w-7 object-cover rounded-full">
+      <img src="./assets/images/avatar.png" class="h-7 w-7 object-cover rounded-full">
       <svg class="fill-current h-2 ml-1 flex-auto text-gray-700" viewBox="0 0 10 6">
-         <use xlink:href="/assets/images/icons.svg#arrow_down" />
+         <use xlink:href="./assets/images/icons.svg#arrow_down" />
       </svg>
    </button>
 </header>
