--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -4,9 +4,9 @@
    font-style: normal;
    font-weight: 100;
    src: local('IBM Plex Sans Thin'), local('IBMPlexSans-Thin'),
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-100.woff2') format('woff2'),
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-100.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-100.woff') format('woff');
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-100.woff') format('woff');
    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -16,9 +16,9 @@
    font-style: normal;
    font-weight: 200;
    src: local('IBM Plex Sans ExtraLight'), local('IBMPlexSans-ExtraLight'),
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-200.woff2') format('woff2'),
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-200.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-200.woff') format('woff');
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-200.woff') format('woff');
    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -28,9 +28,9 @@
    font-style: normal;
    font-weight: 300;
    src: local('IBM Plex Sans Light'), local('IBMPlexSans-Light'),
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-300.woff2') format('woff2'),
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-300.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-300.woff') format('woff');
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-300.woff') format('woff');
    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -40,9 +40,9 @@
    font-style: normal;
    font-weight: 400;
    src: local('IBM Plex Sans'), local('IBMPlexSans'),
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-regular.woff2') format('woff2'),
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-regular.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-regular.woff') format('woff');
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-regular.woff') format('woff');
    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -52,9 +52,9 @@
    font-style: normal;
    font-weight: 500;
    src: local('IBM Plex Sans Medium'), local('IBMPlexSans-Medium'),
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-500.woff2') format('woff2'),
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-500.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-500.woff') format('woff');
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-500.woff') format('woff');
    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -64,9 +64,9 @@
    font-style: normal;
    font-weight: 600;
    src: local('IBM Plex Sans SemiBold'), local('IBMPlexSans-SemiBold'),
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-600.woff2') format('woff2'),
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-600.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-600.woff') format('woff');
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-600.woff') format('woff');
    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -76,8 +76,8 @@
    font-style: normal;
    font-weight: 700;
    src: local('IBM Plex Sans Bold'), local('IBMPlexSans-Bold'),
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-700.woff2') format('woff2'),
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-700.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url('/assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-700.woff') format('woff');
+      url('./assets/fonts/ibm-plex-sans-v7-cyrillic-ext_cyrillic-700.woff') format('woff');
    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
